# vcan-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
apps/abs_ecu/: main.cpp
apps/monitor/: main.cpp
apps/motor_control/: main.cpp
apps/motor_ecu/: main.cpp
apps/ui/: can_worker_qt.cpp  can_worker_qt.h  main.cpp  main_window.cpp  main_window.h
dbc/: vcansim.dbc
docs/: architecture.md  requirements.md  signal-encoding.md  testing.md
scripts/: run_vcan_demo.sh  setup_vcan.sh
src/common/: base_ecu.cpp  base_ecu.h  can_frame.h  ican_driver.h  imotor_controller.h  isensor.h  isensors.h  itimer.h  signal_encoder.cpp  signal_encoder.h
src/control/: motor_control_client.cpp  motor_control_client.h
src/ecu/: abs_ecu.cpp  abs_ecu.h  motor_ecu.cpp  motor_ecu.h
src/monitor/: csv_logger.cpp  csv_logger.h  decoder.cpp  decoder.h  monitor_core.cpp  monitor_core.h  monitor_session.cpp  monitor_session.h
src/platform/linux/: timer.cpp  timer.h
src/platform/linux/runner/: abs_ecu_main.cpp  ecu_runner.h  motor_ecu_main.cpp
src/platform/linux/sim/: sim_engine.h  wheel_sensor.h
src/platform/linux/socketcan/: driver.cpp  driver.h
src/sim/: rpm_sensor.cpp  rpm_sensor.h  temp_sensor.h  wheel_sensor.h
src/ui/: can_bridge.cpp  can_bridge.h  ui_controller.cpp  ui_controller.h
tests/integration/: test_abs_integration.cpp  test_frames.py  test_motor_control_integration.cpp  test_motor_integration.cpp
tests/integration/utils/: frame_dump_main.cpp  stop_timer.h
tests/mocks/: mock_can_driver.h  mock_motor_controller.h  mock_sensor.h  mock_timer.h
tests/unit/: test_abs_ecu.cpp  test_csv_logger.cpp  test_decoder.cpp  test_monitor_core.cpp  test_monitor_session.cpp  test_motor_control.cpp  test_motor_ecu.cpp  test_signal_encoding.cpp  test_sim_engine.cpp
tools/: can_monitor.py
